@@ -265,7 +265,6 @@ if(WIN32)
   set_target_properties(${PROJ_CORE_TARGET}
     PROPERTIES
     OUTPUT_NAME "${PROJ_CORE_TARGET_OUTPUT_NAME}"
-    VERSION  ${${PROJECT_INTERN_NAME}_VERSION}
     CLEAN_DIRECT_OUTPUT 1)
 elseif(BUILD_FRAMEWORKS_AND_BUNDLE)
   set_target_properties(${PROJ_CORE_TARGET}
@@ -275,7 +274,6 @@ elseif(BUILD_FRAMEWORKS_AND_BUNDLE)
 else()
   set_target_properties(${PROJ_CORE_TARGET}
     PROPERTIES
-    VERSION "${${PROJECT_INTERN_NAME}_VERSION}"
     SOVERSION "${${PROJECT_INTERN_NAME}_SOVERSION}"
     CLEAN_DIRECT_OUTPUT 1)
 endif()
